# flexo

./: .gitignore  README.md
debugging/: serial_test.cpp  serial_test.h
ros2/: setup_env.sh  sync_to_pi.sh
ros2/src/k1/: package.xml  setup.cfg  setup.py
ros2/src/k1/config/: poses.yaml  servo_config.yaml
ros2/src/k1/k1/: .controller.py.swp  controller.py
ros2/src/k1_control/: CMakeLists.txt  k1_control_plugin.xml  package.xml
ros2/src/k1_control/include/k1_control/: k1_control.h  k1_executor.h  k1_hardware.h  k1_params.h  k1_robot.h
ros2/src/k1_control/src/: k1_control.cpp  k1_executor.cpp  k1_hardware.cpp  k1_params.cpp  k1_robot.cpp
ros2/src/k1_description/: package.xml  setup.cfg  setup.py
ros2/src/k1_description/launch/: launch.py
ros2/src/k1_description/meshes/: left_arm_upper_link.STL  left_hand_link.STL  left_knee_link.STL  left_lower_arm_link.STL  right_hip_link.STL  right_upper_arm_link.STL
ros2/src/k1_description/meshes/collision/: base_link.STL  face_link.STL  head_link.STL  left_ankle_link.STL  left_arm_link.STL  left_arm_lower_link.STL  left_arm_upper_link.STL  left_calf_link.STL  left_hand_link.STL  left_hip_link.STL  left_knee_link.STL  left_shoulder_link.STL  left_thigh_link.STL  right_ankle_link.STL  right_arm_link.STL  right_arm_lower.STL  right_arm_upper_link.STL  right_calf_link.STL  right_hand_link.STL  right_hip_link.STL  right_knee_link.STL  right_lower_arm_link.STL
ros2/src/k1_description/meshes/visual/: base_link.STL  face_link.STL  head_link.STL  left_ankle_link.STL  left_arm_link.STL  left_arm_upper_link.STL  left_calf_link.STL  left_foot_link.STL  left_hip_link.STL  left_thigh_link.STL  left_upper_arm_link.STL  right_ankle_link.STL  right_arm_link.STL  right_arm_upper.STL  right_arm_upper_link.STL  right_foot_link.STL  right_hand_link.STL  right_hip_link.STL  right_knee_link.STL  right_shoulder_link.STL  right_thigh_link.STL
ros2/src/k1_description/rviz/: default.rviz
ros2/src/k1_description/urdf/: k1.xacro
ros2/src/k1_interfaces/: CMakeLists.txt  package.xml
ros2/src/k1_interfaces/msg/: Joints.msg  Status.msg
ros2/src/k1_interfaces/srv/: JointControl.srv
ros2/src/k1_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ros2/src/k1_moveit/config/: initial_positions.yaml  joint_limits.yaml  k1.ros2_control.xacro  k1.srdf  k1.urdf.xacro  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
ros2/src/k1_moveit/launch/: demo.launch.py  demo_fix.launch.py  k1_bringup.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot_controllers.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
system/desktop/: cyclone-config.json5  cyclone-config.xml  setup_env.bash  start_zeno.bash
system/robot/: cyclone-config.json5  cyclone-config.xml  setup_env.bash
